Package_Tools/include-C/ImageMagick-6/magick/in_arbeiit/static.h

  extern  void
  UnregisterMNGImage(void);
  extern  void
  UnregisterMONOImage(void);
  extern  void
  UnregisterMPCImage(void);
  extern  void
  UnregisterMPRImage(void);
  extern  void
  UnregisterMSLImage(void);
  extern  void
  UnregisterMTVImage(void);
  extern  void
  UnregisterMVGImage(void);
  extern  void
  UnregisterNETSCAPEImage(void);
  extern  void
  UnregisterNULLImage(void);
  extern  void
  UnregisterP7Image(void);
  extern  void
  UnregisterPBMImage(void);
  extern  void
  UnregisterOTBImage(void);
  extern  void
  UnregisterPALMImage(void);
  extern  void
  UnregisterPANGOImage(void);
  extern  void
  UnregisterPATTERNImage(void);
  extern  void
  UnregisterPCDImage(void);
  extern  void
  UnregisterPCDSImage(void);
  extern  void
  UnregisterPCLImage(void);
  extern  void
  UnregisterPCTImage(void);
  extern  void
  UnregisterPCXImage(void);
  extern  void
  UnregisterPDBImage(void);
  extern  void
  UnregisterPDFImage(void);
  extern  void
  UnregisterPESImage(void);
  extern  void
  UnregisterPGXImage(void);
  extern  void
  UnregisterPICImage(void);
  extern  void
  UnregisterPICTImage(void);
  extern  void
  UnregisterPIXImage(void);
  extern  void
  UnregisterPLASMAImage(void);
  extern  void
  UnregisterPGMImage(void);
  extern  void
  UnregisterPMImage(void);
  extern  void
  UnregisterPNGImage(void);
  extern  void
  UnregisterPNMImage(void);
  extern  void
  UnregisterPPMImage(void);
  extern  void
  UnregisterPREVIEWImage(void);
  extern  void
  UnregisterPSImage(void);
  extern  void
  UnregisterPS2Image(void);
  extern  void
  UnregisterPS3Image(void);
  extern  void
  UnregisterPSDImage(void);
  extern  void
  UnregisterPTIFImage(void);
  extern  void
  UnregisterPWPImage(void);
  extern  void
  UnregisterRASImage(void);
  extern  void
  UnregisterRAWImage(void);
  extern  void
  UnregisterRGBImage(void);
  extern  void
  UnregisterRGBAImage(void);
  extern  void
  UnregisterRGFImage(void);
  extern  void
  UnregisterRLAImage(void);
  extern  void
  UnregisterRLEImage(void);
  extern  void
  UnregisterSCRImage(void);
  extern  void
  UnregisterSCREENSHOTImage(void);
  extern  void
  UnregisterSCTImage(void);
  extern  void
  UnregisterSFWImage(void);
  extern  void
  UnregisterSGIImage(void);
  extern  void
  UnregisterSHTMLImage(void);
  extern  void
  UnregisterSIXELImage(void);
  extern  void
  UnregisterSTEGANOImage(void);
  extern  void
  UnregisterSUNImage(void);
  extern  void
  UnregisterSVGImage(void);
  extern  void
  UnregisterTEXTImage(void);
  extern  void
  UnregisterTGAImage(void);
  extern  void
  UnregisterTHUMBNAILImage(void);
  extern  void
  UnregisterTIFImage(void);
  extern  void
  UnregisterTIFFImage(void);
  extern  void
  UnregisterTILEImage(void);
  extern  void
  UnregisterTIMImage(void);
  extern  void
  UnregisterTTFImage(void);
  extern  void
  UnregisterTXTImage(void);
  extern  void
  UnregisterUILImage(void);
  extern  void
  UnregisterURLImage(void);
  extern  void
  UnregisterUYVYImage(void);
  extern  void
  UnregisterVDAImage(void);
  extern  void
  UnregisterVICARImage(void);
  extern  void
  UnregisterVIDImage(void);
  extern  void
  UnregisterVIDEOImage(void);
  extern  void
  UnregisterVIFFImage(void);
  extern  void
  UnregisterVIPSImage(void);
  extern  void
  UnregisterVSTImage(void);
  extern  void
  UnregisterWBMPImage(void);
  extern  void
  UnregisterWEBPImage(void);
  extern  void
  UnregisterWMFImage(void);
  extern  void
  UnregisterWPGImage(void);
  extern  void
  UnregisterXImage(void);
  extern  void
  UnregisterXBMImage(void);
  extern  void
  UnregisterXCImage(void);
  extern  void
  UnregisterXCFImage(void);
  extern  void
  UnregisterXPMImage(void);
  extern  void
  UnregisterXPSImage(void);
  extern  void
  UnregisterXVImage(void);
  extern  void
  UnregisterXWDImage(void);
  extern  void
  UnregisterYCBCRImage(void);
  extern  void
  UnregisterYUVImage(void);
extern  void
  RegisterStaticModules(void);
  extern  void
  UnregisterStaticModules(void);