Package_Tools/include-C/ImageMagick-6/magick/in_arbeiit/static.pp

procedure UnregisterMNGImage;cdecl;external;
procedure UnregisterMONOImage;cdecl;external;
procedure UnregisterMPCImage;cdecl;external;
procedure UnregisterMPRImage;cdecl;external;
procedure UnregisterMSLImage;cdecl;external;
procedure UnregisterMTVImage;cdecl;external;
procedure UnregisterMVGImage;cdecl;external;
procedure UnregisterNETSCAPEImage;cdecl;external;
procedure UnregisterNULLImage;cdecl;external;
procedure UnregisterP7Image;cdecl;external;
procedure UnregisterPBMImage;cdecl;external;
procedure UnregisterOTBImage;cdecl;external;
procedure UnregisterPALMImage;cdecl;external;
procedure UnregisterPANGOImage;cdecl;external;
procedure UnregisterPATTERNImage;cdecl;external;
procedure UnregisterPCDImage;cdecl;external;
procedure UnregisterPCDSImage;cdecl;external;
procedure UnregisterPCLImage;cdecl;external;
procedure UnregisterPCTImage;cdecl;external;
procedure UnregisterPCXImage;cdecl;external;
procedure UnregisterPDBImage;cdecl;external;
procedure UnregisterPDFImage;cdecl;external;
procedure UnregisterPESImage;cdecl;external;
procedure UnregisterPGXImage;cdecl;external;
procedure UnregisterPICImage;cdecl;external;
procedure UnregisterPICTImage;cdecl;external;
procedure UnregisterPIXImage;cdecl;external;
procedure UnregisterPLASMAImage;cdecl;external;
procedure UnregisterPGMImage;cdecl;external;
procedure UnregisterPMImage;cdecl;external;
procedure UnregisterPNGImage;cdecl;external;
procedure UnregisterPNMImage;cdecl;external;
procedure UnregisterPPMImage;cdecl;external;
procedure UnregisterPREVIEWImage;cdecl;external;
procedure UnregisterPSImage;cdecl;external;
procedure UnregisterPS2Image;cdecl;external;
procedure UnregisterPS3Image;cdecl;external;
procedure UnregisterPSDImage;cdecl;external;
procedure UnregisterPTIFImage;cdecl;external;
procedure UnregisterPWPImage;cdecl;external;
procedure UnregisterRASImage;cdecl;external;
procedure UnregisterRAWImage;cdecl;external;
procedure UnregisterRGBImage;cdecl;external;
procedure UnregisterRGBAImage;cdecl;external;
procedure UnregisterRGFImage;cdecl;external;
procedure UnregisterRLAImage;cdecl;external;
procedure UnregisterRLEImage;cdecl;external;
procedure UnregisterSCRImage;cdecl;external;
procedure UnregisterSCREENSHOTImage;cdecl;external;
procedure UnregisterSCTImage;cdecl;external;
procedure UnregisterSFWImage;cdecl;external;
procedure UnregisterSGIImage;cdecl;external;
procedure UnregisterSHTMLImage;cdecl;external;
procedure UnregisterSIXELImage;cdecl;external;
procedure UnregisterSTEGANOImage;cdecl;external;
procedure UnregisterSUNImage;cdecl;external;
procedure UnregisterSVGImage;cdecl;external;
procedure UnregisterTEXTImage;cdecl;external;
procedure UnregisterTGAImage;cdecl;external;
procedure UnregisterTHUMBNAILImage;cdecl;external;
procedure UnregisterTIFImage;cdecl;external;
procedure UnregisterTIFFImage;cdecl;external;
procedure UnregisterTILEImage;cdecl;external;
procedure UnregisterTIMImage;cdecl;external;
procedure UnregisterTTFImage;cdecl;external;
procedure UnregisterTXTImage;cdecl;external;
procedure UnregisterUILImage;cdecl;external;
procedure UnregisterURLImage;cdecl;external;
procedure UnregisterUYVYImage;cdecl;external;
procedure UnregisterVDAImage;cdecl;external;
procedure UnregisterVICARImage;cdecl;external;
procedure UnregisterVIDImage;cdecl;external;
procedure UnregisterVIDEOImage;cdecl;external;
procedure UnregisterVIFFImage;cdecl;external;
procedure UnregisterVIPSImage;cdecl;external;
procedure UnregisterVSTImage;cdecl;external;
procedure UnregisterWBMPImage;cdecl;external;
procedure UnregisterWEBPImage;cdecl;external;
procedure UnregisterWMFImage;cdecl;external;
procedure UnregisterWPGImage;cdecl;external;
procedure UnregisterXImage;cdecl;external;
procedure UnregisterXBMImage;cdecl;external;
procedure UnregisterXCImage;cdecl;external;
procedure UnregisterXCFImage;cdecl;external;
procedure UnregisterXPMImage;cdecl;external;
procedure UnregisterXPSImage;cdecl;external;
procedure UnregisterXVImage;cdecl;external;
procedure UnregisterXWDImage;cdecl;external;
procedure UnregisterYCBCRImage;cdecl;external;
procedure UnregisterYUVImage;cdecl;external;
procedure RegisterStaticModules;cdecl;external;
procedure UnregisterStaticModules;cdecl;external;
{$endif}

implementation


end.
